2002-11-08 19:43  chris

	* MANIFEST: Oops, typo in MANIFEST

2002-11-08 19:42  chris

	* COPYRIGHT, MANIFEST, README, Template.pm: v0.73 Prep for release:
	add documentation

2002-11-08 14:18  chris

	* Template.pm, test.pl: v0.72 Abstract out the template syntax
	regexes.  Add performance measurement to the test routines

2002-11-08 11:21  chris

	* Template.pm, test.pl: v0.71 This version STRONGLY deprecates
	v0.70, since some templating syntax has changed.
	
	Clean up loop code: use <cam_loop> instead of <loop>, make case
	insensitive, add setLoop function
	
	Clean up addParams: allow mixed hash and hashref style arguments
	
	test.pl: if Text::Diff module is available, use it to condense
	output

2002-11-08 01:11  chris

	* Template.pm: Fix documentation typo

2002-11-08 00:49  chris

	* Template.pm, test.pl: v0.70 Add support for <loop>s.	Add
	optimize flags to all of the regexes.

2002-10-29 14:22  chris

	* Template.pm: v0.65, allow program specified parameters to
	override template specified parameters of the same name.

2002-09-20 14:54  chris

	* Template.pm: Loosen the restriction on the ::var=value:: code
	Bump version to 0.64

2002-09-18 15:58  chris

	* Template.pm: Support included files via   <!-- #include
	template="<file>" --> syntax.  Also add support for
	enabling/disabling this feature.

2002-09-16 17:50  chris

	* test.pl: Documentation of help script

2002-09-16 17:08  chris

	* test.pl: more tests

2002-09-16 16:47  chris

	* Template.pm, test.pl: Bug fixes, add testing code

2002-09-16 16:16  chris

	* Template.pm: Add support for "::<key>=<val>::" constant
	construct.  Remove extraneous "warnings" tweaking.  Bump version.

2002-07-03 11:33  chris

	* Template.pm: Fix typo in use_cache variable

2002-06-10 16:38  tasc

	* Template.pm: Change all class methods to require
	PACKAGE->method() syntax.  Fixed typo in error message Bumped
	version

2002-06-06 15:58  tasc

	* Template.pm: bump version

2002-06-06 15:58  tasc
