@@ -1,3 +1,8 @@
+2002-11-08 20:51  chris
+
+	* Template.pm: v0.74 Fix the loop-out replace Speed up the pattern
+	construction by adding it to the object
+
 2002-11-08 19:43  chris
 
 	* MANIFEST: Oops, typo in MANIFEST
